--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "mi-ads",
-  "version": "1.0",
-  "description": "",
+  "version": "1.0.0",
+  "description": "Simple advertising discord bot. Created using Mongo and discord.js.\r ## Installation\r Download files and fill `.env` file with credentials. To run type `node index.js`\r ## Contributing\r Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change.",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mic0ishere/mi-ads.git"
   },
   "author": "mic0",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0",
-    "fs": "0.0.1-security",
-    "mongoose": "^5.10.9"
-  }
+  "license": "ODbL-1.0",
+  "bugs": {
+    "url": "https://github.com/mic0ishere/mi-ads/issues"
+  },
+  "homepage": "https://github.com/mic0ishere/mi-ads#readme"
 }
