Remove package-lock.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/mic0ishere/mi-ads.git"
   },
   "author": "mic0",
-  "license": "ODbL-1.0",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/mic0ishere/mi-ads/issues"
   },
